--- a/q/274498.html
+++ b/q/274498.html
@@ -26,23 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>019</td><td>Brachylog</td><td>240806T084028Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274728#274728">Fatalize</a></td></tr>
-<tr d-ix="1"><td>048</td><td>Ruby</td><td>240731T112444Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274597#274597">int 21h </a></td></tr>
-<tr d-ix="2"><td>015</td><td>Japt</td><td>240729T084519Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274548#274548">Shaggy</a></td></tr>
-<tr d-ix="3"><td>074</td><td>Python 3</td><td>240729T232016Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274567#274567">xnor</a></td></tr>
-<tr d-ix="4"><td>073</td><td>><></td><td>240729T215342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274565#274565">SE - sto</a></td></tr>
-<tr d-ix="5"><td>038</td><td>R</td><td>240729T065256Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274547#274547">pajonk</a></td></tr>
-<tr d-ix="6"><td>094</td><td>JavaScript Node.js</td><td>240728T201455Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274525#274525">Andrew B</a></td></tr>
-<tr d-ix="7"><td>046</td><td>Arturo</td><td>240728T222239Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274529#274529">chunes</a></td></tr>
-<tr d-ix="8"><td>064</td><td>JavaScript ES6</td><td>240728T134928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274507#274507">Arnauld</a></td></tr>
-<tr d-ix="9"><td>093</td><td>Google Sheets</td><td>240728T123106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274502#274502">doubleun</a></td></tr>
-<tr d-ix="10"><td>013</td><td>Jelly</td><td>240728T191734Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274524#274524">Jonathan</a></td></tr>
-<tr d-ix="11"><td>028</td><td>APL+WIN</td><td>240728T165935Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274517#274517">Graham</a></td></tr>
-<tr d-ix="12"><td>021</td><td>K ngn/k</td><td>240728T125025Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274503#274503">akamayu</a></td></tr>
-<tr d-ix="13"><td>065</td><td>JavaScript Node.js</td><td>240728T122454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274501#274501">l4m2</a></td></tr>
-<tr d-ix="14"><td>013</td><td>Vyxal</td><td>240728T120204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274499#274499">lyxal</a></td></tr>
+<tr d-ix="0"><td>062</td><td>C clang</td><td>240806T173408Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274736#274736">jdt</a></td></tr>
+<tr d-ix="1"><td>019</td><td>Brachylog</td><td>240806T084028Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274728#274728">Fatalize</a></td></tr>
+<tr d-ix="2"><td>048</td><td>Ruby</td><td>240731T112444Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274597#274597">int 21h </a></td></tr>
+<tr d-ix="3"><td>015</td><td>Japt</td><td>240729T084519Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274548#274548">Shaggy</a></td></tr>
+<tr d-ix="4"><td>074</td><td>Python 3</td><td>240729T232016Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274567#274567">xnor</a></td></tr>
+<tr d-ix="5"><td>073</td><td>><></td><td>240729T215342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274565#274565">SE - sto</a></td></tr>
+<tr d-ix="6"><td>038</td><td>R</td><td>240729T065256Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274547#274547">pajonk</a></td></tr>
+<tr d-ix="7"><td>094</td><td>JavaScript Node.js</td><td>240728T201455Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274525#274525">Andrew B</a></td></tr>
+<tr d-ix="8"><td>046</td><td>Arturo</td><td>240728T222239Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274529#274529">chunes</a></td></tr>
+<tr d-ix="9"><td>064</td><td>JavaScript ES6</td><td>240728T134928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274507#274507">Arnauld</a></td></tr>
+<tr d-ix="10"><td>093</td><td>Google Sheets</td><td>240728T123106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274502#274502">doubleun</a></td></tr>
+<tr d-ix="11"><td>013</td><td>Jelly</td><td>240728T191734Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274524#274524">Jonathan</a></td></tr>
+<tr d-ix="12"><td>028</td><td>APL+WIN</td><td>240728T165935Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274517#274517">Graham</a></td></tr>
+<tr d-ix="13"><td>021</td><td>K ngn/k</td><td>240728T125025Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274503#274503">akamayu</a></td></tr>
+<tr d-ix="14"><td>065</td><td>JavaScript Node.js</td><td>240728T122454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274501#274501">l4m2</a></td></tr>
+<tr d-ix="15"><td>013</td><td>Vyxal</td><td>240728T120204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274499#274499">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 19 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 62 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>t,i;f(*r){for(t=i=0;i&lt;3;)t+=r[i++]=1+rand()%800;t-2048&amp;&amp;f(r);}
+</code></pre>
+<p><a href="https://tio.run/##LYxRC4MgFIXf9yskSK6zwGoPgfOXNB@kMITmhgkLor8@Z7oL9xzOuR93rMdF2TkEXxmu4erIrl8OvDCCcXPvOPFUuMFQKkVDnbITkLJnjPu6ZbceYw2O8CMY69FTGQuKoP2C4qwJxorwFE9gGzqZk4bt379dvGgoyqlCeZGI8rBFFXkmT22StjI3iKYqWSvjmyN8R72oeQ315wc" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 19 bytes</h1>
 <pre><code>Ṫ{≤800&amp;ℕ}ᵐ+2048&amp;≜₁ᵐ
 </code></pre>
 <p><a href="https://tio.run/##SypKTM6ozMlPN/r//@HOVdWPOpdYGBioPWqZWvtw6wRtIwMTC7VHnXMeNTUCuf///48CAA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
@@ -53,14 +60,14 @@
                 &amp;≜₁ᵐ     Label in a random order
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 48 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 48 bytes</h1>
 <pre class="lang-ruby prettyprint-override"><code>1until(a=3.times.map{rand(800)+1}).sum==2048
 p a
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsH2JNvoWK60_CKFLIXMPAVDPT1DAwOFlPylpSVpuhY3DQxL80oyczQSbY31SjJzU4v1chMLqosS81I0LAwMNLUNazX1iktzbW2NDEwsrAsUEiH6dlkn2dgkKqTmpXAVKCTppeUklpSk5ukV5xeVQBQsWAChAQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Here 3 random numbers are repeatedly picked from the <code>0..800</code> range and their sum is checked whether it is equal to 2048.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Èx ¶2pB}a@801ö3
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=yHggtjJwQn1hQDgwMfYz" rel="nofollow noreferrer">Test it</a></p>
@@ -76,7 +83,7 @@ p a
           801ö3     :  3 random integers in the range [0,801)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 74 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 74 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>from random import*
 while l:=choices(range(801),k=3):sum(l)==2048&lt;print(l)
@@ -102,7 +109,7 @@ print(a,b-a-1,N+1-b)
 <p><a href="https://tio.run/##DcoxDsAQFIDh3Sk6UgxIky6u4A6EttLi5dXS06vpz5988PWrVbMDjnFgKwv6GmdygYZ9Jc6aTRMvgn3np0hfX@BJdLIzUcc1E7fVjBHAXDudUHqphONKBjbGDw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>Note that <code>sample</code> picks without replacement, here from the range from <code>0</code> to <code>N+1</code> inclusive. Finally, to return to the original problem with a fixed sum of 2048, subtract each output from 800 to get the 81-byte code.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://esolangs.org/wiki/Fish" rel="nofollow noreferrer">&gt;&lt;&gt;</a>, 73 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://esolangs.org/wiki/Fish" rel="nofollow noreferrer">&gt;&lt;&gt;</a>, 73 bytes</h1>
 <pre><code>&gt;11a&gt;:1-}$:2*}$ ?!v&gt;x+&gt;{{30.    
 ^?(3l~?**aa8:~~~{{&lt;|\~^.01];?=&quot;ࠀ&quot;+}:$+}:$}:
 </code></pre>
@@ -120,13 +127,13 @@ print(a,b-a-1,N+1-b)
 
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 38 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 38 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>while(sum(r&lt;-sample(800,3,T))-2048)0
 r
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWN9XKMzJzUjWKS3M1imx0ixNzC4A8CwMDHWOdEE1NXSMDEwtNA64iiGqoJphmAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 118 </s> 94 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 118 </s> 94 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>_=&gt;{k=s=&gt;(Math.random()*s|0)+1;c=801;while(c&gt;800){a=k(800);b=k(800);c=2048-a-b};return[a,b,c]}
 </code></pre>
@@ -142,7 +149,7 @@ r
 </li>
 </ol>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 46 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 46 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>$=&gt;[until[a:3|map=&gt;[800 1random]][2048=∑a]a]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?BxbM4y" rel="nofollow noreferrer">Try it!</a></p>
@@ -155,13 +162,13 @@ a:                   ; to a assign...
 a                    ; return a
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1>JavaScript (ES6), 64 bytes</h1>
+<div id="pu9" class="pu"><h1>JavaScript (ES6), 64 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(a=[q=2048,0,0].map(_=&gt;(q-=n=Math.random()*801|0,n)))=&gt;q?f():a
 </code></pre>
 <p><a href="https://tio.run/##FYtBTsMwEEX3nGKW48aOJohFRJn0BD1BVaGR40BKYjuJYdGWq2Pc1f9f7/2L/Mhm1zEm40Pvch4YhU8LP9NLq0nTuZ4l4jt3uBj2fJT0Wa/i@zCj2rXU3El7pRR3y2FA9Sp5CCtOLoEHBtqXeIPmkVWl4PYE8GBSWLH3ZdrgtzC5egofKBqkXl3/bR1i1GAVcAcRqtKK/Jv/QkxjOWRjtiT2y2zj1XFLRP8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1>Google Sheets, 93 bytes</h1>
+<div id="pu10" class="pu"><h1>Google Sheets, 93 bytes</h1>
 <pre><code>=let(f,lambda(f,let(n,map(X1:Z1,lambda(_,int(352*rand()+448))),if(2^11=sum(n),n,f(f)))),f(f))
 </code></pre>
 <p>To ensure there's no bias, get three random integers in the range <code>[448..800]</code> and repeat until they add up to 2,048, instead of getting two integers and checking the remainder.</p>
@@ -181,7 +188,7 @@ a                    ; return a
 )
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu11" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>800ṗ3S⁼¥Ƈ⁽¥/X
 </code></pre>
 <p>A niladic Link that yields a list of three positive integers less than <span class="math-container">\$801\$</span> that sum to <span class="math-container">\$2048\$</span>.</p>
@@ -217,20 +224,20 @@ a                    ; return a
    X           -        random choice {[1..800]}
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h1>APL+WIN, 28 bytes</h1>
+<div id="pu12" class="pu"><h1>APL+WIN, 28 bytes</h1>
 <pre><code>:while 2048≠+/n←3?800
 :end
 n
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tv1V5RmZOqoKRgYnFo84F2vp5IEX2FgYGXFapeSlcef@Bqrj@p3EBAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 21 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 21 bytes</h1>
 <p>Randomly pick three numbers from <code>[1,800]</code> until the sum is 2048.</p>
 <pre><code>(~2048=+/){1+3?799}/1
 </code></pre>
 <p><a href="https://ngn.bitbucket.io/k#eJzLtNKoMzIwsbDV1tesNtQ2tje3tKzVN+TiSs5ITc62qtZQ0dav0NRRUrBVUNLRB3LBHG0gR6WyVr+iFqrQIZOLi0tfIag0TyE3vyhVoSQzN7VYoSRfoTgjv1yhJCNVoSgxLyU/Ny+1uBiqA7u9Q0UOANs1U9I=" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 65 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 65 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;[X=[],1,2].map(i=&gt;n-=X[+i]=Math.random()*801|0)|~n?f(2047):X
 </code></pre>
@@ -245,7 +252,7 @@ f=n=&gt;(a=R())+(b=R())+(c=R())^2048?f():[a,b,c]
 <p><a href="https://tio.run/##LYpBDoIwEADvvmRrKSnGA4qLL/DC1WiyFlAUu4Q2pjG@3UrUuUwymSs9yJmxG7yyXDcxVhiw3JG/pCPZmu8g5rnWMnvpWYsWSyCsQAgJp7/N18eFXubbFsR6T8kpMYfY8ggBdRE2mS6kDMKwddw3ac9nmEYR3zz4bopRKefJ3JTrng2ufnwA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Silly. Assumes infinite stack.</p>
 </div>
-<div id="pu14" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 13 bytes</h1>
+<div id="pu15" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 13 bytes</h1>
 <pre><code>800ɾ3↔'∑k¦=;℅
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCI4MDDJvjPihpQn4oiRa8KmPTvihIUiLCIiLCIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
