--- a/q/274498.html
+++ b/q/274498.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>062</td><td>C clang</td><td>240806T173408Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274736#274736">jdt</a></td></tr>
-<tr d-ix="1"><td>019</td><td>Brachylog</td><td>240806T084028Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274728#274728">Fatalize</a></td></tr>
-<tr d-ix="2"><td>048</td><td>Ruby</td><td>240731T112444Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274597#274597">int 21h </a></td></tr>
-<tr d-ix="3"><td>015</td><td>Japt</td><td>240729T084519Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274548#274548">Shaggy</a></td></tr>
-<tr d-ix="4"><td>074</td><td>Python 3</td><td>240729T232016Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274567#274567">xnor</a></td></tr>
-<tr d-ix="5"><td>073</td><td>><></td><td>240729T215342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274565#274565">SE - sto</a></td></tr>
-<tr d-ix="6"><td>038</td><td>R</td><td>240729T065256Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274547#274547">pajonk</a></td></tr>
-<tr d-ix="7"><td>094</td><td>JavaScript Node.js</td><td>240728T201455Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274525#274525">Andrew B</a></td></tr>
+<tr d-ix="0"><td>069</td><td>JavaScript Node.js</td><td>240728T201455Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274525#274525">Andrew B</a></td></tr>
+<tr d-ix="1"><td>062</td><td>C clang</td><td>240806T173408Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274736#274736">jdt</a></td></tr>
+<tr d-ix="2"><td>019</td><td>Brachylog</td><td>240806T084028Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274728#274728">Fatalize</a></td></tr>
+<tr d-ix="3"><td>048</td><td>Ruby</td><td>240731T112444Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274597#274597">int 21h </a></td></tr>
+<tr d-ix="4"><td>015</td><td>Japt</td><td>240729T084519Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274548#274548">Shaggy</a></td></tr>
+<tr d-ix="5"><td>074</td><td>Python 3</td><td>240729T232016Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274567#274567">xnor</a></td></tr>
+<tr d-ix="6"><td>073</td><td>><></td><td>240729T215342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274565#274565">SE - sto</a></td></tr>
+<tr d-ix="7"><td>038</td><td>R</td><td>240729T065256Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274547#274547">pajonk</a></td></tr>
 <tr d-ix="8"><td>046</td><td>Arturo</td><td>240728T222239Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274529#274529">chunes</a></td></tr>
 <tr d-ix="9"><td>064</td><td>JavaScript ES6</td><td>240728T134928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274507#274507">Arnauld</a></td></tr>
 <tr d-ix="10"><td>093</td><td>Google Sheets</td><td>240728T123106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274502#274502">doubleun</a></td></tr>
@@ -43,13 +43,31 @@
 <tr d-ix="14"><td>065</td><td>JavaScript Node.js</td><td>240728T122454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274501#274501">l4m2</a></td></tr>
 <tr d-ix="15"><td>013</td><td>Vyxal</td><td>240728T120204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274499#274499">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 62 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 118  94 </s> 69 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=(k=_=&gt;Math.random()*801|0,a=k(b=k()),c=2048-a-b)=&gt;c&gt;800?f():[a,b,c]
+</code></pre>
+<p><a href="https://tio.run/##Dcg7DsIwDADQ69goqQzqEFVyOAEnQAg5bgv9xaitmLh76PCWN8pXNl2Hz@6ztV0pPcPET4432d/VKrm1BfAU6PwjJzxBOiA65QvVwYtPyFFjILr2gM1dXHL6KGp5s7mrZnvB8Vj@" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Go ahead and try this online - it works, and returns immediately. My first attempt at this challenge was to follow what others have done and pick 3 numbers at random between 1 and 800, and reject them if they don't sum to 2048 - but it takes forever - so I rejected that approach and tried another more feasible one.</p>
+<p>My algorithm is: pick 2 numbers between 1 and 800 - if the remainder is greater than 800 then pick again. <s> Since the 3rd number is &quot;more constrained&quot; than the other two, return one of 3 possibilities where this 3rd number appears in 1st, 2nd or 3rd place, again picked at random.</s></p>
+<p>I'm reasonably confident that <s>this removes any</s> there is no bias.</p>
+<p>EDIT:</p>
+<ol>
+<li><p>Thanks @xnor for pointing out a bug, which I have fixed: my function which returns numbers between 1 and n was returning numbers between 1 and n-1.</p>
+</li>
+<li><p>I have convinced myself that the last step of mixing the numbers is unnecessary, so I removed it.</p>
+</li>
+<li><p>Thanks to @Shaggy for a complete re-write which reduces the byte count from 94 to 69</p>
+</li>
+</ol>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 62 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>t,i;f(*r){for(t=i=0;i&lt;3;)t+=r[i++]=1+rand()%800;t-2048&amp;&amp;f(r);}
 </code></pre>
 <p><a href="https://tio.run/##LYxRC4MgFIXf9yskSK6zwGoPgfOXNB@kMITmhgkLor8@Z7oL9xzOuR93rMdF2TkEXxmu4erIrl8OvDCCcXPvOPFUuMFQKkVDnbITkLJnjPu6ZbceYw2O8CMY69FTGQuKoP2C4qwJxorwFE9gGzqZk4bt379dvGgoyqlCeZGI8rBFFXkmT22StjI3iKYqWSvjmyN8R72oeQ315wc" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 19 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 19 bytes</h1>
 <pre><code>Ṫ{≤800&amp;ℕ}ᵐ+2048&amp;≜₁ᵐ
 </code></pre>
 <p><a href="https://tio.run/##SypKTM6ozMlPN/r//@HOVdWPOpdYGBioPWqZWvtw6wRtIwMTC7VHnXMeNTUCuf///48CAA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
@@ -60,14 +78,14 @@
                 &amp;≜₁ᵐ     Label in a random order
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 48 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 48 bytes</h1>
 <pre class="lang-ruby prettyprint-override"><code>1until(a=3.times.map{rand(800)+1}).sum==2048
 p a
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsH2JNvoWK60_CKFLIXMPAVDPT1DAwOFlPylpSVpuhY3DQxL80oyczQSbY31SjJzU4v1chMLqosS81I0LAwMNLUNazX1iktzbW2NDEwsrAsUEiH6dlkn2dgkKqTmpXAVKCTppeUklpSk5ukV5xeVQBQsWAChAQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Here 3 random numbers are repeatedly picked from the <code>0..800</code> range and their sum is checked whether it is equal to 2048.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Èx ¶2pB}a@801ö3
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=yHggtjJwQn1hQDgwMfYz" rel="nofollow noreferrer">Test it</a></p>
@@ -83,7 +101,7 @@ p a
           801ö3     :  3 random integers in the range [0,801)
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 74 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 74 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>from random import*
 while l:=choices(range(801),k=3):sum(l)==2048&lt;print(l)
@@ -109,7 +127,7 @@ print(a,b-a-1,N+1-b)
 <p><a href="https://tio.run/##DcoxDsAQFIDh3Sk6UgxIky6u4A6EttLi5dXS06vpz5988PWrVbMDjnFgKwv6GmdygYZ9Jc6aTRMvgn3np0hfX@BJdLIzUcc1E7fVjBHAXDudUHqphONKBjbGDw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>Note that <code>sample</code> picks without replacement, here from the range from <code>0</code> to <code>N+1</code> inclusive. Finally, to return to the original problem with a fixed sum of 2048, subtract each output from 800 to get the 81-byte code.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://esolangs.org/wiki/Fish" rel="nofollow noreferrer">&gt;&lt;&gt;</a>, 73 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://esolangs.org/wiki/Fish" rel="nofollow noreferrer">&gt;&lt;&gt;</a>, 73 bytes</h1>
 <pre><code>&gt;11a&gt;:1-}$:2*}$ ?!v&gt;x+&gt;{{30.    
 ^?(3l~?**aa8:~~~{{&lt;|\~^.01];?=&quot;ࠀ&quot;+}:$+}:$}:
 </code></pre>
@@ -127,27 +145,11 @@ print(a,b-a-1,N+1-b)
 
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 38 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 38 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>while(sum(r&lt;-sample(800,3,T))-2048)0
 r
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWN9XKMzJzUjWKS3M1imx0ixNzC4A8CwMDHWOdEE1NXSMDEwtNA64iiGqoJphmAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 118 </s> 94 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>_=&gt;{k=s=&gt;(Math.random()*s|0)+1;c=801;while(c&gt;800){a=k(800);b=k(800);c=2048-a-b};return[a,b,c]}
-</code></pre>
-<p><a href="https://tio.run/##NcZBDsIgEADA7yxaGmo8kJDlB77AGLNQamspGEA91L4d48E5zZ1elG2aHoWH2Ls6YL2iXmfMqOFEZWwThT4uwHb5I9i@Uxal6NR7nLwDq6UQbCWc4Rdl/rF4EEfJiZtNJVeeKZypMY29bNXGkKN3rY83GICx@gU" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Go ahead and try this online - it works, and returns immediately. My first attempt at this challenge was to follow what others have done and pick 3 numbers at random between 1 and 800, and reject them if they don't sum to 2048 - but it takes forever - so I rejected that approach and tried another more feasible one.</p>
-<p>My algorithm is: pick 2 numbers between 1 and 800 - if the remainder is greater than 800 then pick again. <s> Since the 3rd number is &quot;more constrained&quot; than the other two, return one of 3 possibilities where this 3rd number appears in 1st, 2nd or 3rd place, again picked at random.</s></p>
-<p>I'm reasonably confident that <s>this removes any</s> there is no bias.</p>
-<p>EDIT:</p>
-<ol>
-<li><p>Thanks @xnor for pointing out a bug, which I have fixed: my function which returns numbers between 1 and n was returning numbers between 1 and n-1.</p>
-</li>
-<li><p>I have convinced myself that the last step of mixing the numbers is unnecessary, so I removed it.</p>
-</li>
-</ol>
 </div>
 <div id="pu8" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 46 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>$=&gt;[until[a:3|map=&gt;[800 1random]][2048=∑a]a]
